Exit on launch, color fixing
There is now an option to exit RV on launch of Steam.

When opening launch options with a light text color it's hard to see; now it will toggle the text color of the launch options modal to black on open if it's set to a light color, and back to normal once it closes.

--- a/app/reliefValve.css
+++ b/app/reliefValve.css
@@ -363,19 +363,19 @@ label[for="cbOfflineFix"] {
   font-weight: bold;
 }
 
-#love {
+#aboutFooter {
+  margin-bottom: 8px;
+}
+
+.love {
+  color: red;
   font-size: 24px;
-  color:red;
-  vertical-align: -3px;
+  vertical-align: -2px;
 }
 
 #featureList li {
   margin-bottom: 4px;
   list-style: upper-roman;
-}
-
-#aboutFooter {
-
 }
 
 @media only screen and (min-width: 601px) {
@@ -401,5 +401,17 @@ label[for="cbOfflineFix"] {
 @media only screen and (max-width: 600px) {
   #launchOptionsListRight {
     margin-top: -32px;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  #blacklistRemove {
+    margin-bottom: 8px;
+    clear: right;
+  }
+
+  #blacklistReset {
+    margin-bottom: 8px;
+    clear: left;
   }
 }
